--- a/src/style.scss
+++ b/src/style.scss
@@ -44,9 +44,6 @@ img{
   font-size: 2em;
 }
 
-.landingpage{
-}
-
 .btn a{
   background-color: green;
 }
@@ -90,6 +87,17 @@ img{
 .loginform .btn_submit:hover{
   background-color: rgb(20, 20, 80);
 }
+.submit{
+  background-color: grey;
+  color: #ffffff;
+  font-weight: 600;
+  border: none;
+  text-transform: capitalize;
+}
+.submit:hover{
+  background-color: rgb(90, 86, 86);
+  
+}
 
 .card_custom{
   background-color: #ffffff;
@@ -99,9 +107,6 @@ img{
 }
 .col-3{
   padding: 0!important;
-}
-
-.box2{
 }
 
 .box1{
